# GRPC

./: CMakeLists.txt  certificate.h  client.cpp  client.h  main.cpp  main.qml  model.cpp  model.h  server.cpp  server.h
